--- a/stylesheet.css
+++ b/stylesheet.css
@@ -216,6 +216,40 @@ a{
 
 }
 
+.listSplitNB {
+
+  display:grid;
+  grid-template-columns: 40% 30% 30%;
+
+}
+
+.collapsible {
+  background-color: #fff;
+  /*color: #000;*/
+  cursor: pointer;
+  /*padding: 18px;*/
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  border-bottom-style:solid;
+  border-bottom-width:1px;
+
+}
+
+.collapsible:hover{
+  background-color: efefef;
+}
+
+.dropcontent {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+
 
 
 
