--- a/popout stylesheet.css
+++ b/popout stylesheet.css
@@ -24,6 +24,8 @@ a{
   color: 555555;
 }
 
+
+
 .overall {
 
   width:810px;
@@ -69,6 +71,50 @@ a{
   padding-top: 10px;
   margin-left:10px;
   margin-right:10px;
+}
+
+.listSplitNB {
+
+  display:grid;
+  grid-template-columns: 40% 30% 30%;
+
+}
+
+.listSplit {
+
+  display:grid;
+  grid-template-columns: 40% 30% 30%;
+  text-align: left;
+  border-bottom-style:solid;
+  border-bottom-width:1px;
+
+}
+
+.collapsible {
+  background-color: #fff;
+  /*color: #000;*/
+  cursor: pointer;
+  /*padding: 18px;*/
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  border-bottom-style:solid;
+  border-bottom-width:1px;
+
+}
+
+.collapsible:hover{
+  background-color: efefef;
+}
+
+.dropcontent {
+  
+  display: none;
+  overflow: hidden;
+  background-color: #fff;
+
 }
 
 @media screen and (max-width:810px) {
