--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 
 p {
   font-family:sans-serif;
+  font-weight: 100;
   font-size: 15px;
 
 
@@ -8,6 +9,7 @@ p {
 
 li {
   font-family: sans-serif;
+  font-weight: 100;
   font-size: 15px;
 
 
@@ -52,7 +54,9 @@ a{
 
   color:555555;
 
+
   -webkit-font-smoothing :  none;
+
 
 
 }
@@ -243,7 +247,7 @@ a{
 }
 
 .dropcontent {
-  
+
   display: none;
   overflow: hidden;
   background-color: #fff;
